Refined DCHECK preventing multiple event forwarders in VA tree path

A ViewAndroid tree path from the top to a leaf node can have only
a single EventForwarder instance. Rewrote helper methods used for
DCHECK that enforces the requirement to match the actual job with
the intention.

BUG=717271

Review-Url: https://codereview.chromium.org/2861413002
Cr-Commit-Position: refs/heads/master@{#470814}

Former-commit-id: 1a116ecfdf829702b653ded84a0e1cdb8bdfd7d6